@@ -1,3 +1,9 @@
+2014-07-18  Pascal Obry  <obry@adacore.com>
+
+	* s-os_lib.ads, s-os_lib.adb (GM_Time_Of): New routine to create an
+	OS_Time from time parts.
+	* adaint.h, adaint.c (__gnat_to_os_time): New routine.
+
 2014-07-18  Ed Schonberg  <schonberg@adacore.com>
 
 	* sem_ch4.adb (Try_Container_Indexing): Refine previous patch for
